--- a/ch4.6_vizAsPointOfInterest.html
+++ b/ch4.6_vizAsPointOfInterest.html
@@ -75,12 +75,13 @@
 		d3.csv('/data/cities.csv', function(cities) {
 			var cityPoints = svg.selectAll('circle').data(cities);
 			var cityText = svg.selectAll('text').data(cities);
+			var radius = d3.scale.linear().domain([0,100]).range([5,30]);
 
 			cityPoints.enter()
 				.append('circle')
 				.attr('cx', function(d) {return projection([d.lon, d.lat])[0]})
 				.attr('cy', function(d) {return projection([d.lon, d.lat])[1]})
-				.attr('r', 4)
+				.attr('r', function(d) {return radius(d.tequila); })
 				.attr('fill', 'steelblue');
 
 			cityText.enter()
